syntax = "proto2";

// 生成go pb文件必须要这个选项
option go_package = "go_pkg_name/";

message ExampleServiceRqst {
  optional string filed1 = 1;
  optional string filed2 = 2;
  optional string filed3 = 3;
  optional string filed4 = 4;
  optional string filed5 = 5;
}

message ExampleServiceRsp {
  required int32 result = 1;
  required string res_info = 2;
}

service example_server {
    rpc example_service(ExampleServiceRqst) returns (ExampleServiceRsp);
}